--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Clase2/Ejemplo1/build/
 /Clase3/Ejemplo1/nbproject/private/
 /Clase3/Ejemplo1/build/
+/EjemploProyecto1/nbproject/private/
+/EjemploProyecto1/build/
