--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /EjemploProyecto1/build/
 /Clase4/nbproject/private/
 /Clase4/build/
+/Clase7/Ejemplo1/nbproject/private/
+/Clase7/Ejemplo1/build/
+/Clase7/Ejemplo2/nbproject/private/
+/Clase7/Ejemplo2/build/
